ladminai-appointment/main/default/objects/Service_Location_Eligibility__c/Service_Location_Eligibility__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableReports>true</enableReports><label>Service Location Eligibility</label><nameField><displayFormat>SLE-{00000}</displayFormat><label>Eligibility Number</label><type>AutoNumber</type></nameField><pluralLabel>Service Location Eligibilities</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>