ladminai-appointment/main/default/objects/Service_Location_Eligibility__c/fields/Eligibility_Key__c.field-meta.xml
<CustomField><fullName>Eligibility_Key__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Eligibility Key</label><length>80</length><required>true</required><type>Text</type><unique>true</unique></CustomField>