ladminai-appointment/main/default/objects/Service_Location_Eligibility__c/fields/Location__c.field-meta.xml
<CustomField><fullName>Location__c</fullName><deleteConstraint>Cascade</deleteConstraint><label>Location</label><referenceTo>Location</referenceTo><relationshipName>Service_Eligibilities</relationshipName><required>true</required><type>Lookup</type></CustomField>