ladminai-appointment/main/default/objects/Service_Location_Eligibility__c/fields/Service__c.field-meta.xml
<CustomField><fullName>Service__c</fullName><deleteConstraint>Cascade</deleteConstraint><label>Service</label><referenceTo>Appointment_Service__c</referenceTo><relationshipName>Location_Eligibilities</relationshipName><required>true</required><type>Lookup</type></CustomField>